--- a/tidy/wear/src/main/res/layout/activity_main.xml
+++ b/tidy/wear/src/main/res/layout/activity_main.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto">
 <androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:background="@color/tidy_green"
     tools:deviceIds="wear">
 
     <ImageView
@@ -14,6 +14,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:src="@drawable/phone"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@id/my_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
@@ -28,8 +29,9 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
         android:layout_height="41dp"
         android:gravity="center"
         android:text="@string/NotSignedIn"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="15sp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
@@ -37,6 +39,13 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/logo_view" />
+
+    <androidx.wear.widget.WearableRecyclerView
+        android:id="@+id/recycler_launcher_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"
+        android:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
