--- a/tidy/wear/src/main/res/values/colors.xml
+++ b/tidy/wear/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="light_blue">#E3F2FD</color>
     <color name="egg_yellow">#FFE082</color>
     <color name="light_yellow">#FFF8E1</color>
+    <color name="tidy_green">#92AE3E</color>
 </resources>
