--- a/tidy/app/src/main/res/layout/fragment_sign_up.xml
+++ b/tidy/app/src/main/res/layout/fragment_sign_up.xml
@@ -38,7 +38,7 @@
             android:layout_width="257dp"
             android:layout_height="39dp"
             android:layout_marginTop="68dp"
-            android:text="@string/First_Name"
+            android:hint="@string/First_Name"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
