--- a/tidy/app/src/main/res/navigation/navigation.xml
+++ b/tidy/app/src/main/res/navigation/navigation.xml
@@ -71,7 +71,22 @@
     <fragment
         android:id="@+id/admin_page_fragment"
         android:name="com.epfl.esl.tidy.admin.AdminPageFragment"
-        android:label="AdminPageFragment" />
+        android:label="AdminPageFragment" >
+        <action
+            android:id="@+id/action_admin_page_fragment_to_adminPage2Fragment"
+            app:destination="@id/adminPage2Fragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/adminPage2Fragment"
+        android:name="com.epfl.esl.tidy.admin.AdminPage2Fragment"
+        android:label="AdminPage2Fragment" >
+        <action
+            android:id="@+id/action_adminPage2Fragment_to_addRoomsFragment"
+            app:destination="@id/addRoomsFragment" />
+        <action
+            android:id="@+id/action_adminPage2Fragment_to_addTasks"
+            app:destination="@id/addTasks" />
+    </fragment>
 
 
 </navigation>
