--- a/tidy/app/src/main/res/layout/add_rooms_fragment.xml
+++ b/tidy/app/src/main/res/layout/add_rooms_fragment.xml
@@ -27,8 +27,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="@string/add_room_description"
-            android:textSize="16dp"
+            android:text=""
+            android:textSize="34dp"
             android:gravity="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
