--- a/tidy/app/src/main/res/layout/fragment_admin_page2.xml
+++ b/tidy/app/src/main/res/layout/fragment_admin_page2.xml
@@ -30,16 +30,28 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/userIdHolder"
+            android:id="@+id/spaceIdName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="invalid"
-            android:textSize="34dp"
+            android:text="@string/spaceID"
+            android:textSize="20dp"
+            app:layout_constraintBottom_toTopOf="@+id/spaceIdHolder"
+            app:layout_constraintEnd_toEndOf="@+id/spaceIdHolder"
+            app:layout_constraintStart_toStartOf="@+id/spaceIdHolder"
+            app:layout_constraintTop_toBottomOf="@id/adminTitle" />
+
+        <TextView
+            android:id="@+id/spaceIdHolder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
             android:gravity="center"
+            android:text="invalid"
+            android:textSize="24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/adminTitle"/>
+            app:layout_constraintTop_toBottomOf="@+id/spaceIdName" />
 
         <Button
             android:id="@+id/addRoomsButton"
@@ -51,7 +63,7 @@
             app:layout_constraintBottom_toTopOf="@+id/addItemsButton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/userIdHolder" />
+            app:layout_constraintTop_toBottomOf="@+id/spaceIdHolder" />
 
         <Button
             android:id="@+id/addItemsButton"
