--- a/tidy/app/src/main/res/layout/add_supplies_fragment.xml
+++ b/tidy/app/src/main/res/layout/add_supplies_fragment.xml
@@ -10,14 +10,63 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp">
 
+        <TextView
+            android:id="@+id/addSupplyTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/add_supplies"
+            android:textSize="40dp"
+            android:gravity="center"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/spaceIdName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/spaceID"
+            android:textSize="20dp"
+            app:layout_constraintBottom_toTopOf="@+id/spaceIdHolder"
+            app:layout_constraintEnd_toEndOf="@+id/spaceIdHolder"
+            app:layout_constraintStart_toStartOf="@+id/spaceIdHolder"
+            app:layout_constraintTop_toBottomOf="@id/addSupplyTitle" />
+
+        <TextView
+            android:id="@+id/spaceIdHolder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:gravity="center"
+            android:text="invalid"
+            android:textSize="24dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/spaceIdName" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="143dp"
+            android:layout_height="85dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:src="@drawable/broom"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <ImageButton
             android:id="@+id/supplyImage"
             android:layout_width="match_parent"
-            android:layout_height="400dp"
+            android:layout_height="300dp"
+            android:layout_marginHorizontal="150dp"
+            android:layout_marginVertical="40dp"
             android:adjustViewBounds="true"
             android:background="@null"
             android:scaleType="centerInside"
             android:text="@string/pick_image"
+            app:layout_constraintTop_toBottomOf="@+id/spaceIdHolder"
             app:srcCompat="@drawable/pick_image" />
 
         <FrameLayout
@@ -34,13 +83,17 @@
                 android:id="@+id/EditTexts"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="100dp"
                 android:orientation="vertical">
 
-                <Spinner
-                    android:id="@+id/spinner_supplies"
-                    android:spinnerMode="dropdown"
+                <EditText
+                    android:id="@+id/supplyName"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="50dp"
+                    android:gravity="center"
+                    android:hint="@string/supply"
+                    android:inputType="textPersonName"
+                    android:textSize="30sp" />
 
                 <!--TODO make this a dropdown menu, not open text.-->
                 <EditText
@@ -58,34 +111,41 @@
 
 
         <FrameLayout
-            android:id="@+id/frameLayout2"
+            android:id="@+id/frameLayout3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="64dp"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
-            tools:layout_editor_absoluteX="20dp">
+            app:layout_constraintTop_toBottomOf="@+id/frameLayout">
 
             <LinearLayout
-                android:id="@+id/SignInSignUpButtons"
+                android:id="@+id/AddClearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:orientation="vertical">
-
-                <ProgressBar
-                    android:id="@+id/progressBar"
-                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp" />
+                android:gravity="center"
+                android:orientation="horizontal">
+                <!--                <ProgressBar-->
+                <!--                    android:id="@+id/progressBar"-->
+                <!--                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"-->
+                <!--                    android:layout_width="match_parent"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:layout_marginBottom="16dp" />-->
 
                 <Button
-                    android:id="@+id/AddRoomButton"
+                    android:id="@+id/AddSupplyButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="@string/add_room"
+                    android:layout_marginEnd="20dp"
+                    android:text="@string/add_supply"
+                    android:textSize="20sp" />
+
+                <Button
+                    android:id="@+id/ClearSupplyButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="@string/clear"
                     android:textSize="20sp" />
 
                 <!--                <Button-->
@@ -97,12 +157,59 @@
                 <!--                    app:backgroundTint="@color/white" />-->
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/UpdateLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:visibility="gone">
+
+                <Button
+                    android:id="@+id/UpdateSupplyButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="@string/update_supply"
+                    android:textSize="20sp" />
+
+            </LinearLayout>
+
         </FrameLayout>
 
+
+        <TextView
+            android:id="@+id/existingSupplyTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="48dp"
+            android:layout_marginTop="40dp"
+            android:gravity="center"
+            android:text="@string/existing_supplies"
+            android:textSize="30dp"
+            app:layout_constraintBottom_toTopOf="@+id/recycler_view_rooms"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/frameLayout3" />
+
+        <ProgressBar
+            android:id="@+id/progress_circular"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/recycler_view_rooms"
+            app:layout_constraintBottom_toBottomOf="@+id/recycler_view_rooms"/>
+
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view_rooms"
             android:layout_width="match_parent"
-            android:layout_height="400dp"
-            app:layout_constraintTop_toBottomOf="@+id/frameLayout2" />
+            android:layout_height="350dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/existingSupplyTitle" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
