--- a/tidy/app/src/main/res/menu/bottom_menu.xml
+++ b/tidy/app/src/main/res/menu/bottom_menu.xml
@@ -24,7 +24,7 @@
         app:labelVisibilityMode="labeled"
         android:icon="@drawable/ic_baseline_settings_24"/>
     <item
-        android:id="@+id/augmentedReality"
+        android:id="@+id/TidyArFragment"
         android:title="@string/augmented_reality"
         app:labelVisibilityMode="labeled"
         android:icon="@drawable/ic_baseline_camera_24"/>
