--- a/tidy/app/src/main/res/layout/fragment_tasks.xml
+++ b/tidy/app/src/main/res/layout/fragment_tasks.xml
@@ -41,16 +41,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tasksTitle" />
 
-        <Button
-            android:id="@+id/AddTaskButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/add_task"
-            android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tasksDescription" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view_tasks"
@@ -61,10 +51,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.494"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/AddTaskButton"
+            app:layout_constraintTop_toBottomOf="@+id/tasksDescription"
             android:layout_height="0dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 </layout>
