--- a/tidy/app/src/main/res/layout/card_layout.xml
+++ b/tidy/app/src/main/res/layout/card_layout.xml
@@ -190,8 +190,8 @@
 
     <ImageView
         android:id="@+id/imageView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="104dp"
+        android:layout_height="56dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="8dp"
