--- a/tidy/app/src/main/res/layout/fragment_profile_login.xml
+++ b/tidy/app/src/main/res/layout/fragment_profile_login.xml
@@ -52,7 +52,8 @@
             app:layout_constraintHorizontal_bias="0.352"
             app:layout_constraintStart_toEndOf="@+id/password"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.53" />
+            app:layout_constraintVertical_bias="0.53"
+            android:backgroundTint="@color/tidy_primary"/>
 
         <Button
             android:id="@+id/toPassword"
@@ -65,7 +66,8 @@
             app:layout_constraintHorizontal_bias="0.352"
             app:layout_constraintStart_toEndOf="@+id/email"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.53" />
+            app:layout_constraintVertical_bias="0.53"
+            android:backgroundTint="@color/tidy_primary"/>
 
         <Button
             android:id="@+id/sign_up"
@@ -76,7 +78,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/email" />
+            app:layout_constraintTop_toBottomOf="@+id/email"
+            android:backgroundTint="@color/tidy_primary"/>
 
         <TextView
             android:id="@+id/Sign_up_txt"
