--- a/tidy/app/src/main/res/layout/fragment_settings.xml
+++ b/tidy/app/src/main/res/layout/fragment_settings.xml
@@ -16,7 +16,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.271"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/password"
+            app:layout_constraintTop_toBottomOf="@+id/password_label"
             app:layout_constraintVertical_bias="1.0" />
 
         <View
@@ -36,11 +36,12 @@
             android:layout_height="wrap_content"
             android:text="@string/Password"
             android:textSize="20sp"
+            android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@+id/view"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.275"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/email_input"
+            app:layout_constraintTop_toBottomOf="@+id/email_label"
             app:layout_constraintVertical_bias="1.0" />
 
 
@@ -51,7 +52,7 @@
             android:layout_marginTop="4dp"
             android:text="@string/Password"
             android:textSize="34sp"
-            android:visibility="visible"
+            android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.482"
             app:layout_constraintStart_toStartOf="parent"
@@ -74,6 +75,7 @@
             android:layout_height="1dp"
             android:layout_marginEnd="200dp"
             android:background="@color/black"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/email_label"
@@ -85,6 +87,7 @@
             android:layout_height="190dp"
             android:layout_marginTop="50dp"
             android:src="@drawable/user"
+            android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.122"
             app:layout_constraintStart_toStartOf="parent"
@@ -99,26 +102,24 @@
             android:textColor="#000000"
             android:textSize="16sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/title"
-            app:layout_constraintVertical_bias="0.018" />
+            app:layout_constraintTop_toBottomOf="@+id/title" />
+
 
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="292dp"
+            android:layout_marginTop="108dp"
             android:text="Settings"
-            android:textColor="#000000"
+            android:textColor="@color/tidy_primary"
             android:textSize="60sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.077" />
-
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/first_name"
@@ -128,7 +129,7 @@
             android:layout_marginEnd="75dp"
             android:text="@string/First_Name"
             android:textSize="24sp"
-            android:visibility="visible"
+            android:visibility="invisible"
             app:layout_constraintEnd_toStartOf="@+id/last_name"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/first_name_label"
@@ -139,12 +140,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="28dp"
-            android:layout_marginEnd="75dp"
             android:hint="@string/First_Name"
             android:textSize="24sp"
             android:visibility="invisible"
-            app:layout_constraintEnd_toStartOf="@+id/last_name"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/first_name_label"
             app:layout_constraintTop_toTopOf="@+id/first_name_label" />
 
@@ -155,13 +153,11 @@
             android:layout_marginTop="1dp"
             android:text="@string/Email"
             android:textSize="34sp"
-            android:visibility="visible"
-            app:layout_constraintBottom_toTopOf="@+id/password"
+            android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.49"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/email_label"
-            app:layout_constraintVertical_bias="0.012" />
+            app:layout_constraintTop_toBottomOf="@+id/email_label" />
 
         <EditText
             android:id="@+id/email_input"
@@ -202,9 +198,10 @@
             android:id="@+id/sign_out"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="36dp"
+            android:layout_marginTop="20dp"
             android:text="@string/Sign_Out"
             android:textSize="34sp"
+            android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/space_id_input" />
@@ -216,6 +213,7 @@
             android:layout_marginTop="16dp"
             android:text="@string/Administrator"
             android:textSize="34sp"
+            android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/sign_out" />
@@ -227,7 +225,7 @@
             android:layout_marginEnd="56dp"
             android:text="@string/Last_Name"
             android:textSize="24sp"
-            android:visibility="visible"
+            android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/first_name" />
 
@@ -239,27 +237,26 @@
             android:textSize="24sp"
             android:visibility="invisible"
             app:layout_constraintStart_toStartOf="@+id/last_name_label"
-            app:layout_constraintTop_toTopOf="@+id/first_name_input" />
+            app:layout_constraintTop_toBottomOf="@+id/last_name_label" />
 
         <ImageButton
             android:id="@+id/edit_button"
             android:layout_width="85dp"
-            android:layout_height="75dp"
+            android:layout_height="85dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:background="#00000000"
             android:scaleType="fitCenter"
             android:scrollbarSize="1dp"
-            android:visibility="visible"
+            android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/pencil" />
 
         <ImageButton
             android:id="@+id/save_button"
-            android:layout_width="95dp"
+            android:layout_width="85dp"
             android:layout_height="85dp"
-            android:layout_marginTop="-8dp"
             android:layout_marginEnd="8dp"
             android:background="#00000000"
             android:scaleType="fitCenter"
@@ -271,7 +268,7 @@
         <ImageButton
             android:id="@+id/cancel_button"
             android:layout_width="85dp"
-            android:layout_height="75dp"
+            android:layout_height="85dp"
             android:background="#00000000"
             android:scaleType="fitCenter"
             android:visibility="visible"
