--- a/tidy/app/src/main/res/layout/fragment_tidy_ar.xml
+++ b/tidy/app/src/main/res/layout/fragment_tidy_ar.xml
@@ -1,25 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools">
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.epfl.esl.tidy.ar.AugmentedImageFragment">
+    android:layout_height="match_parent">
 
-
-    <fragment android:name="com.epfl.esl.tidy.ar.AugmentedImageFragment"
+    <fragment
         android:id="@+id/ux_fragment"
+        android:name="com.epfl.esl.tidy.ar.AugmentedImageFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/ar_message"
+        android:layout_width="500dp"
+        android:layout_height="180dp"
+        android:layout_marginBottom="64dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/ux_fragment"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="@+id/ux_fragment"
+        android:background="#FAEEE7"
+        app:cardCornerRadius="13dp"
+        android:visibility="visible"
+        android:outlineSpotShadowColor="@color/black">
 
-    <ImageView
-        android:id="@+id/image_view_fit_to_scan"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:scaleType="fitCenter"
-        android:src="@drawable/fit_to_scan"
-        android:contentDescription="@string/fit_image_to_scan"
-        />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="180dp"
+            android:layout_marginBottom="60dp"
 
-</FrameLayout>
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="@+id/ux_fragment"
+            app:layout_constraintEnd_toEndOf="@+id/ux_fragment"
+            app:layout_constraintHorizontal_bias="0.496"
+            app:layout_constraintStart_toStartOf="parent">
+
+
+            <TextView
+                android:id="@+id/ar_welcome"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="0.2"
+                android:fontFamily="sans-serif-condensed-medium"
+                android:text="@string/ar_welcome"
+                android:textSize="35dp" />
+
+            <TextView
+                android:id="@+id/ar_guide"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="0.8"
+                android:fontFamily="sans-serif-condensed-medium"
+                android:gravity="center"
+                android:text="@string/ar_guide"
+                android:textSize="28sp"
+                android:visibility="visible" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
