fixed layout appearance

--- a/tidy/app/src/main/res/layout/fragment_profile_login.xml
+++ b/tidy/app/src/main/res/layout/fragment_profile_login.xml
@@ -7,6 +7,7 @@
         android:layout_height="match_parent">
 
         <ImageView
+            android:id="@+id/imageView2"
             android:layout_width="300dp"
             android:layout_height="255dp"
             android:src="@drawable/broom"
@@ -24,19 +25,6 @@
             app:layout_constraintBottom_toBottomOf="@id/email"
             app:layout_constraintEnd_toEndOf="@id/email" />
 
-        <EditText
-            android:id="@+id/email"
-            android:layout_width="300dp"
-            android:layout_height="45dp"
-            android:hint="@string/Email_Address"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.356"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.525" />
-
         <Button
             android:id="@+id/toTask"
             android:layout_width="61dp"
@@ -47,19 +35,31 @@
             app:layout_constraintBottom_toBottomOf="@id/toPassword"
             app:layout_constraintEnd_toEndOf="@id/toPassword" />
 
+        <EditText
+            android:id="@+id/email"
+            android:layout_width="300dp"
+            android:layout_height="45dp"
+            android:hint="@string/Email_Address"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.227"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.52" />
+
         <Button
             android:id="@+id/toPassword"
             android:layout_width="61dp"
             android:layout_height="48dp"
+            android:layout_marginStart="276dp"
+            android:backgroundTint="@color/tidy_primary"
             android:text="@string/NextButton"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.352"
-            app:layout_constraintStart_toEndOf="@+id/email"
+            app:layout_constraintStart_toStartOf="@+id/imageView2"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.53"
-            android:backgroundTint="@color/tidy_primary"/>
+            app:layout_constraintVertical_bias="0.522" />
 
         <Button
             android:id="@+id/sign_up"
