--- a/tidy/app/src/main/res/layout/fragment_sign_up.xml
+++ b/tidy/app/src/main/res/layout/fragment_sign_up.xml
@@ -23,7 +23,7 @@
             android:layout_width="212dp"
             android:layout_height="27dp"
             android:text="Let's get you up and running!"
-            android:textColor="#000000"
+            android:textColor="@color/tidy_primary"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
