--- a/tidy/app/src/main/res/layout/fragment_add_tasks.xml
+++ b/tidy/app/src/main/res/layout/fragment_add_tasks.xml
@@ -65,7 +65,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:orientation="vertical"
-            app:layout_constraintTop_toBottomOf="@+id/imageView">
+            app:layout_constraintTop_toBottomOf="@+id/spaceIdName">
 
             <LinearLayout
                 android:id="@+id/EditTexts"
@@ -160,40 +160,6 @@
             </LinearLayout>
 
         </FrameLayout>
-
-
-        <TextView
-            android:id="@+id/existingTasksTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="48dp"
-            android:layout_marginTop="40dp"
-            android:gravity="center"
-            android:text="@string/existing_tasks"
-            android:textSize="30dp"
-            app:layout_constraintBottom_toTopOf="@+id/recycler_view_tasks"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/frameLayout3" />
-
-        <ProgressBar
-            android:id="@+id/progress_circular"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/recycler_view_tasks"
-            app:layout_constraintBottom_toBottomOf="@+id/recycler_view_tasks"/>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view_tasks"
-            android:layout_width="match_parent"
-            android:layout_height="350dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
-            android:layout_marginTop="20dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/existingTasksTitle" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
